objects/CRM_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Actual_Penetration__c</fullName>
        <formula>(CRM_Total_Volume_Settled__c/  CRM_Volume_by_introducer__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Penetration %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_April__c</fullName>
        <label>Achieved April</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_August__c</fullName>
        <label>Achieved August</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>PAF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_December__c</fullName>
        <label>Achieved December</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_February__c</fullName>
        <label>Achieved February</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Forecast_Name_Unique__c</fullName>
        <label>Forecast Name(Unique)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Forecast_Year__c</fullName>
        <label>Forecast Year</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Introducer__c</fullName>
        <label>Introducer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_January__c</fullName>
        <label>Achieved January</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_July__c</fullName>
        <label>Achieved July</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_June__c</fullName>
        <label>Achieved June</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_March__c</fullName>
        <label>Achieved March</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_May__c</fullName>
        <label>Achieved May</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_November__c</fullName>
        <label>Achieved November</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_October__c</fullName>
        <label>Achieved October</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_September__c</fullName>
        <label>Achieved September</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Target_April__c</fullName>
        <label>Target April</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_August__c</fullName>
        <label>Target August</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_December__c</fullName>
        <label>Target December</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_February__c</fullName>
        <label>Target February</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_January__c</fullName>
        <label>Target January</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_July__c</fullName>
        <label>Target July</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_June__c</fullName>
        <label>Target June</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_March__c</fullName>
        <label>Target March</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_May__c</fullName>
        <label>Target May</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_November__c</fullName>
        <label>Target November</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_October__c</fullName>
        <label>Target October</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_Penetration_Percent__c</fullName>
        <formula>(CRM_Total_Target_Volume__c  /  CRM_Volume_by_introducer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Penetration %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Target_Penetration__c</fullName>
        <label>Target Penetration % DELETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Target_September__c</fullName>
        <label>Target September</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Target_Volume__c</fullName>
        <formula>(CRM_Target_Penetration__c  *  CRM_Volume_by_introducer__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Total_Target_Volume__c</fullName>
        <label>Total Target Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Total_Volume_Settled__c</fullName>
        <label>Total Volume Settled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Volume_by_introducer__c</fullName>
        <label>Volume by introducer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year</label>
        <type>Checkbox</type>
    </fields>
    <label>Forecast</label>
    <listViews>
        <fullName>All_With_Business_Unit</fullName>
        <columns>NAME</columns>
        <columns>CRM_Business_Unit__c</columns>
        <columns>CRM_Introducer__c</columns>
        <columns>CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All With Business Unit</label>
        <sharedTo>
            <group>SalesforceCOE</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CRM_Validation_to_check_value_change</fullName>
        <active>false</active>
        <errorConditionFormula>IF( AND( NOT(ISCHANGED(CRM_Status__c)),ISPICKVAL(CRM_Status__c, &apos;Completed&apos;), NOT($User.ProfileId = &quot;00e28000001sDhW&quot;) ,  
 OR( ISCHANGED( CRM_Target_January__c ) ,
 ISCHANGED(CRM_Target_February__c),
 ISCHANGED(CRM_Target_March__c),
 ISCHANGED( CRM_Target_April__c ),
 ISCHANGED( CRM_Target_May__c ),
 ISCHANGED( CRM_Target_June__c ),
 ISCHANGED( CRM_Target_July__c ),
 ISCHANGED(CRM_Target_August__c),
 ISCHANGED( CRM_Target_September__c ),
 ISCHANGED(CRM_Target_October__c),
 ISCHANGED(CRM_Target_November__c),
 ISCHANGED(CRM_Target_December__c)
 )  ) , true, false)</errorConditionFormula>
        <errorMessage>You cannot update Target, Please contact your manager.</errorMessage>
    </validationRules>
</CustomObject>